--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -120,11 +120,14 @@ body { }
 
 #footer 
 { 
+	position: relative;
 	float: left; 
 	clear: both; 
 	width: 100%; 
 	color: #999999;
-	background-color: #363633; 
+	background-color: #363633;
+	bottom: 0;
+	
 }
 
 /* Header */
@@ -259,4 +262,40 @@ width:200px;
 	clear: both;
 }
 
+#lang{
+    position: fixed;
+    top:8px;
+    left:20px;
+}
+
+#lang input{
+    background: #DCDCDC;
+    color: #fff;
+    cursor: pointer;
+    border:1px solid #ccc;
+    width:40px;
+    margin:3px 0;
+}
+
+#lang input:hover{
+    color: #4682B4;
+    border:1px solid #4682B4;
+}
+
+.lang-active{
+    color: #4682B4!important;
+    border:1px solid #4682B4!important;
+}
+.orders{
+	cursor:pointer;
+	margin:0 auto;
+	width:600px;
+	border:1px solid #DCDCDC;
+	margin-bottom:10px;
+}
+
+.orders:hover{
+	cursor:pointer;
+	border:1px solid #DCDCDC;
+}
 
